# quote_collection

./: .gitignore  Dockerfile  Quote_Collection_Project_Summary.md  README.md  cloudbuild.yaml  debug_db.py  deployment_troubleshooting.md  final_report.md  server_log.txt  test_daily_quote.py  test_raw_db.py  update_env.py
backend/: .env.dev  .env.test  Dockerfile  README.md  book_mixture_res.txt  check_async_db.py  check_db.py  check_user.py  debug_ai_recom.py  debug_init.py  debug_login.py  debug_popular.py  debug_recom.py  diagnose_ai.py  evaluation_results.json  force_reset_db.py  list_dbs.py  main.py  mixture_res.txt  pyproject.toml  required_apis.md  requirements.txt  reset_db.py  reset_password_debug.py  run_tests.sh  seed_data.py  test_2_0.py  test_api_local.py  test_book_mixture.py  test_endpoint.py  test_min.py  test_mixture.py  test_output.txt  test_user_model.py  verify_ai.py  verify_aladin.py  verify_refactor.py
backend/alembic/: env.py
backend/alembic/versions/: 344950a73d7c_add_details_id_to_source_table.py  3dbc642555da_add_movie_and_movie_tag_tables.py  47b44d2c1443_seed_initial_users_and_sources_data.py  5cd38c6c7b48_initial_migration.py  c26936a2e9ad_link_quotes_to_sources.py  fbd5881d8893_add_bookmark_folders_and_standardize_.py
backend/app/: database.py  seed_data.py
backend/scripts/: dashboard.py  evaluate_ai_quality.py
backend/tests/: conftest.py  test_drama_router.py  test_movie_router.py  test_quote_router.py  test_recommendation_router.py  test_schemas.py  test_search_router.py  test_source_router.py  test_user_router.py
(+132 files in other folders)
